cnis/n182/test_channel_1/cnf/ccrc2/drop90_1.13.2+2_common_ip/ingress/eric-pm-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: eric-pm-server
  namespace: ccrc2
spec:
  rules:
  - host: "ccrc2-eric-pm-server.ingress.node182-cluster1.seli.gic.ericsson.se"
    http:
      paths:
      - path: /
        backend:
          service:
            name: eric-pm-server
            port:
              number: 9089
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - "ccrc2-eric-pm-server.ingress.node182-cluster1.seli.gic.ericsson.se"
